Pre-alpha version 1.14 Added: new controls on Custom Night (arrows).         old controls were NOT removed because they are going to be needed in the future

--- a/index.css
+++ b/index.css
@@ -111,3 +111,21 @@ html {
 	height: 60vh;
 	background-size: 20vw 60vh;
 }
+
+.triangleUp {
+	width: 0;
+	height: 0;
+	border-top: 3vw solid transparent;
+	border-left: 3vw solid transparent;
+	border-right: 3vw solid transparent;
+	border-bottom: 3vw solid white;
+}
+
+.triangleDown {
+	width: 0;
+	height: 0;
+	border-top: 3vw solid white;
+	border-left: 3vw solid transparent;
+	border-right: 3vw solid transparent;
+	border-bottom: 3vw solid transparent;
+}
